--- a/_config.yml
+++ b/_config.yml
@@ -7,16 +7,10 @@ facebook_appid:   # appid for like button, remove from /_includes/share.html if 
 google_analytics: # set tracking, remove from /javascripts/basic.js if unwanted.
 
 links:
-  - name:         About
-    url:          /about
   - name:         Blog
-    url:          http://muan.co
-    external:     true
+    url:          /blog
   - name:         Email
-    url:          mailto:hello@muan.co
-    external:     true
-  - name:         GitHub
-    url:          http://github.com/muan
+    url:          mailto:foo@example.com
     external:     true
 highlighter:      pygments
 permalink:        pretty
