Change permalink structure

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ links:
   - name:         Blog
     url:          /blog
 highlighter:      pygments
-permalink:        pretty
+permalink:        /blog/:title/
 markdown:         redcarpet
 redcarpet:
   extensions:
