--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,6 @@
 title:            ericnish.io
 description:      A front-end developer's portfolio and blog
-url:              # Site url.
-disqus_shortname: # disqus comment thread for post header options. ( leave blank if unwanted. )
-facebook_appid:   # appid for like button, remove from /_includes/share.html if unwanted.
-google_analytics: # set tracking, remove from /javascripts/basic.js if unwanted.
+url:              http://ericnish.io
 
 links:
   - name:         Home
