--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ links:
   - name:         Projects
     dir:          /projects
     url:          /projects/
-highlighter:      pygments
+highlighter:      rouge
 permalink:        /blog/:title/
 markdown:         kramdown
 redcarpet:
